Revert "swiper fix on mobile landscape"
This reverts commit 8fd0dd3f60765db9920e871a03e3bc0e3d5f1b32.

--- a/css/style.css
+++ b/css/style.css
@@ -475,12 +475,9 @@ body {
     display: none;
   }
 
-  .wrap-row1,
-  .wrap-row2,
-  .wrap-row3 {
+  .swiper-wrapper {
     display: flex;
     flex-direction: column;
-    margin-left: calc(105%);
   }
 
   .video-card,
